update route api scalar for method
